--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         <header>
             <div class="header-content">
                 <div class="header-image">
-                    <img src="images/mi-foto.jpg" alt="Calculadora de Punto de Equilibrio">
+                    <img src="images/mi-foto.jpeg" alt="Calculadora de Punto de Equilibrio">
                 </div>
                 <div class="header-text">
                     <h1>Calculadora de Punto de Equilibrio</h1>
